--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -26,8 +26,8 @@
       "dummy/*": ["tests/dummy/app/*", "app/*"],
       "navi-data": ["addon"],
       "navi-data/*": ["addon/*"],
-      "navi-data/test-support": ["addon-test-support"],
-      "navi-data/test-support/*": ["addon-test-support/*"],
+      "navi-data/test-support": ["addon-test-support", "test-support"],
+      "navi-data/test-support/*": ["addon-test-support/*", "test-support/*"],
       "*": ["types/*"]
     }
   },
